--- a/styles/_signup.scss
+++ b/styles/_signup.scss
@@ -1,48 +1,85 @@
 // Sign up
 #signup-container {
-    margin: 160px auto 30px;
+    margin: 140px auto 30px;
     max-width: 400px;
 
     #social-icons {
+        #google {
+            background: #ea4335;
+        }
+
+        #facebook {
+            background: #1877f2;
+        }
+
+        #twitter {
+            background: #1da1f2;
+        }
+
+        #instagram {
+            background: #c32aa3;
+        }
+
+        #github {
+            background: #211f1f;
+        }
+
         .btn {
             width: 100%;
-            background: lightblue;
-            border: 1px solid black;
             display: flex;
+            padding: 0.5rem;
+            margin: 1rem auto;
+            color: #fff;
 
             .fab {
                 font-size: 1.5rem;
             }
 
-            .col-10 {
+            .mx-auto {
                 text-align: left;
             }
         }
     }
 
-    #show-form-btn {
-        width: 100%;
-        margin-bottom: 2rem;
-        background: $background-color;
+    #or {
+        position: relative;
+        z-index: 1;
+        margin: 2rem;
+
+        &:before {
+            border-top: 1px solid
+                darken($color: $background-color, $amount: 30%);
+            content: "";
+            margin: 0 auto;
+            position: absolute;
+            top: 50%;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            width: 95%;
+            z-index: -1;
+        }
+
+        span {
+            background: #fff;
+            padding: 0 15px;
+        }
     }
 
-    #form-email {
+    #show-form-btn {
+        width: 100%;
+        background: $background-color;
+        padding: 0.5rem;
+        margin-bottom: 1rem;
+    }
+
+    #signup-form {
         display: none;
-
-        .form-group {
-            // #passwordHelpBlock {
-            //     display: none;
-            // }
-
-            // #inputPassword:focus + #passwordHelpBlock {
-            //     display: block;
-            // }
-        }
 
         button {
             background: $primary-color;
             width: 100%;
-            margin-bottom: 1.5rem;
+            margin: 1.5rem auto;
         }
 
         p {
