Finish signup.html and login.html design

--- a/styles/_mobile.scss
+++ b/styles/_mobile.scss
@@ -51,42 +51,41 @@
         }
     }
 
-    // Sign up
-    #signup-container {
-        max-width: max-content;
+    // Sign up, Log in
+    #signup-container,
+    #login-container {
+        max-width: 1000px;
 
         #flex-container {
             display: flex;
         }
 
-        #show-form-btn {
+        #divider-wrapper {
+            display: flex;
+            align-items: center;
+
+            #or {
+                &:before {
+                    border-top: none;
+                    border-left: 1px solid
+                        darken($color: $background-color, $amount: 30%);
+                    left: 50%;
+                    top: 0;
+                }
+
+                span {
+                    position: relative;
+                    top: 45%;
+                }
+            }
+        }
+
+        #btn-wrapper {
             display: none;
         }
 
         #signup-form {
             display: block;
-        }
-    }
-
-    // Log in
-    #login-container {
-        max-width: max-content;
-
-        #flex-container {
-            display: flex;
-        }
-
-        #or {
-            &:before {
-                border-top: none;
-                border-right: 1px solid
-                    darken($color: $background-color, $amount: 30%);
-                margin: auto 0;
-                top: 0;
-                left: 0;
-                right: 0;
-                bottom: 0;
-            }
         }
     }
 }
