--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -3,16 +3,24 @@
     margin-top: 4rem;
     background: darken($color: $background-color, $amount: 20%);
 
+    //20200426add shibazaki
+    img {
+      height: 90px;
+      width: 90px;
+      float: left;
+      transform: translateY(50%) translateX(-50%);
+    }
+
     .row {
         .col-md-3 {
-            display: grid;
+            //20200426upd shibazaki display: grid;
             margin: 1rem;
             text-align: center;
             max-width: fit-content;
 
             h5 {
                 margin: 0;
-                padding: 1rem 0;
+                padding: 0 0 1.3rem 0;
             }
 
             ul {
@@ -20,6 +28,7 @@
 
                 li {
                     padding-bottom: 0.5rem;
+                    font-size: 0.8rem;
                 }
             }
         }
