--- a/styles/style.scss
+++ b/styles/style.scss
@@ -10,6 +10,8 @@
 @import "./error";
 @import "./mobile";
 @import "./animation";
+@import "./_resetpass";
+@import "./_newpass";
 
 // Google fonts
 @import url("https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap");
