--- a/styles/style.scss
+++ b/styles/style.scss
@@ -12,6 +12,7 @@
 @import "./animation";
 @import "./_resetpass";
 @import "./_newpass";
+@import "./_terms";
 
 // Google fonts
 @import url("https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap");
