--- a/styles/_config.scss
+++ b/styles/_config.scss
@@ -8,7 +8,7 @@ $bar-low: $secondary-color;
 $bar-high: #c1564b;
 $bar-mid: darken(
     $color: $primary-color,
-    $amount: 10%
+    $amount: 10%,
 );
 
 @mixin easeOut {
@@ -37,7 +37,7 @@ $bar-mid: darken(
     }
 }
 
-// Desktops $ Laptops
+// Desktops & Laptops
 @mixin screen-lg {
     @media screen and (min-width: 992px) {
         @content;
