Comment out social media icons for sign up and log in

--- a/styles/_signup.scss
+++ b/styles/_signup.scss
@@ -75,7 +75,8 @@
 	}
 
 	#signup-form {
-		display: none;
+		// Uncomment when inplementing social accounts
+		// display: none;
 
 		button {
 			background: $primary-color;
