--- a/styles/_terms.scss
+++ b/styles/_terms.scss
@@ -1,7 +1,7 @@
 // Terms and Conditions
 #terms-container {
 	margin: 160px auto 30px;
-	max-width: 850px;
+	// max-width: 850px;
 
 	.terms-contents {
 		margin-bottom: 40px;
