--- a/styles/style.css
+++ b/styles/style.css
@@ -15,10 +15,6 @@
   border-bottom: 1px solid gray;
 }
 
-.navbar.navbar-expand-lg .container {
-  max-width: 90%;
-}
-
 .navbar.navbar-expand-lg .container .navbar-brand {
   color: #333;
 }
@@ -40,6 +36,7 @@
   width: -moz-fit-content;
   width: fit-content;
   color: #333;
+  margin-left: 20px;
 }
 
 .navbar.navbar-expand-lg .container .navbar-nav .nav-link:after {
@@ -122,7 +119,6 @@
 }
 
 #home .container {
-  max-width: 90%;
   margin-bottom: 8vw;
 }
 
@@ -204,7 +200,6 @@
 
 #results-container {
   margin: 160px auto 30px;
-  max-width: 1000px;
 }
 
 #results-container li {
@@ -214,12 +209,10 @@
 
 #summary-container {
   width: 90%;
-  max-width: 1000px;
   margin: 160px auto 30px;
 }
 
 #details {
-  max-width: 1000px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -290,7 +283,7 @@
 
 #signup-container {
   margin: 140px auto 30px;
-  max-width: 500px;
+  max-width: 550px;
 }
 
 #signup-container #social-icons #google {
@@ -364,7 +357,6 @@
 }
 
 #signup-container #signup-form button {
-  background: #ffcb3c;
   width: 100%;
   margin: 1.5rem auto;
 }
@@ -375,7 +367,7 @@
 
 #login-container {
   margin: 140px auto 30px;
-  max-width: 500px;
+  max-width: 550px;
 }
 
 #login-container #social-icons #google {
@@ -454,7 +446,6 @@
 }
 
 #login-container #login-form button {
-  background: #ffcb3c;
   width: 100%;
   margin: 1.5rem auto;
 }
@@ -621,16 +612,13 @@
   letter-spacing: 1px;
 }
 
-@media screen and (min-width: 1200px) {
-  .navbar.navbar-expand-lg .container ul.navbar-nav {
-    width: 60%;
-  }
-}
-
 @media screen and (min-width: 992px) {
   .navbar.navbar-expand-lg .container .navbar-nav {
-    width: 70%;
     margin: 0 0 0 auto;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    width: 300px;
   }
   #what-is-sumunara .col-lg-4 .card .card-img-top {
     width: 25%;
@@ -661,10 +649,6 @@
   }
   #details #doughnut-chart-container {
     margin-bottom: 0;
-  }
-  #signup-container,
-  #login-container {
-    max-width: 1000px;
   }
   #signup-container #flex-container,
   #login-container #flex-container {
@@ -713,9 +697,6 @@
 }
 
 @media screen and (max-width: 400px) {
-  #home .container {
-    max-width: 100%;
-  }
   #areas .container .col-lg-6 .media img {
     max-width: 250px;
   }
@@ -783,18 +764,14 @@
   max-width: 550px;
 }
 
-#forget-container h1 {
+#forget-container h3 {
   margin-bottom: 1.5rem;
 }
 
-#forget-container .form-group {
-  margin-bottom: 1rem;
-}
-
-#forget-container .form-group .btn {
+#forget-container .btn {
   display: block;
-  margin: 0 auto 1.5rem;
   width: 100%;
+  margin: 1.5rem auto;
   padding: 5px 0;
 }
 
@@ -803,24 +780,19 @@
   max-width: 550px;
 }
 
-#new-container h1 {
+#new-container h3 {
   margin-bottom: 1.5rem;
 }
 
-#new-container .form-group {
-  margin-bottom: 1rem;
-}
-
-#new-container .form-group .btn {
+#new-container .btn {
   display: block;
-  margin: 0 auto 1.5rem;
+  margin: 1.5rem auto;
   width: 100%;
   padding: 5px 0;
 }
 
 #terms-container {
   margin: 160px auto 30px;
-  max-width: 850px;
 }
 
 #terms-container .terms-contents {
