--- a/styles/_details.scss
+++ b/styles/_details.scss
@@ -1,13 +1,13 @@
 // Details Summary
 #summary-container {
 	width: 90%;
-	max-width: 1000px;
+	// max-width: 1000px;
 	margin: 160px auto 30px;
 }
 
 // Details
 #details {
-	max-width: 1000px;
+	// max-width: 1000px;
 	margin-left: auto;
 	margin-right: auto;
 
