--- a/styles/_mobile.scss
+++ b/styles/_mobile.scss
@@ -1,17 +1,22 @@
 // Wide screens (1200px and up)
 @include screen-xl {
 	// Navbar
-	.navbar.navbar-expand-lg .container ul.navbar-nav {
-		width: 60%;
-	}
+	// .navbar.navbar-expand-lg .container ul.navbar-nav {
+	// 	// With signup and login links
+	// 	width: 60%;
+	// }
 }
 
 // Large devices (desktops, 992px and up)
 @include screen-lg {
 	// Navbar
 	.navbar.navbar-expand-lg .container .navbar-nav {
-		width: 70%;
 		margin: 0 0 0 auto;
+		justify-content: flex-end;
+		width: 300px;
+
+		// With signup and login links
+		// width: 70%;
 	}
 
 	// Section - What is Sumunara
@@ -64,7 +69,7 @@
 	// Sign up, Log in
 	#signup-container,
 	#login-container {
-		max-width: 1000px;
+		// max-width: 1000px;
 
 		#flex-container {
 			display: flex;
@@ -118,9 +123,9 @@
 // Smartphones (up to 400px)
 @include screen-xs {
 	// Section - Home
-	#home .container {
-		max-width: 100%;
-	}
+	// #home .container {
+	// 	max-width: 100%;
+	// }
 
 	// Section - Areas
 	#areas {
