--- a/styles/_newpass.scss
+++ b/styles/_newpass.scss
@@ -1,24 +1,17 @@
 // New Password
 #new-container {
-    margin: 160px auto 30px;
-    max-width: 550px;
-    //text-align: center;
+	margin: 160px auto 30px;
+	max-width: 550px;
+	//text-align: center;
 
-    h1 {
-      margin-bottom: 1.5rem;
-    }
+	h3 {
+		margin-bottom: 1.5rem;
+	}
 
-    .form-group {
-        //text-align: center;
-        margin-bottom: 1rem;
-
-        .btn {
-          display:  block;
-          margin: 0 auto 1.5rem;
-          width: 100%;
-          padding: 5px 0;
-        }
-
-    }
-
+	.btn {
+		display: block;
+		margin: 1.5rem auto;
+		width: 100%;
+		padding: 5px 0;
+	}
 }
