--- a/styles/_resetpass.scss
+++ b/styles/_resetpass.scss
@@ -1,24 +1,16 @@
 // Forget Password
 #forget-container {
-    margin: 160px auto 30px;
-    max-width: 550px;
-    //text-align: center;
+	margin: 160px auto 30px;
+	max-width: 550px;
 
-    h1 {
-      margin-bottom: 1.5rem;
-    }
+	h3 {
+		margin-bottom: 1.5rem;
+	}
 
-    .form-group {
-        //text-align: center;
-        margin-bottom: 1rem;
-
-        .btn {
-          display:  block;
-          margin: 0 auto 1.5rem;
-          width: 100%;
-          padding: 5px 0;
-        }
-
-    }
-
+	.btn {
+		display: block;
+		width: 100%;
+		margin: 1.5rem auto;
+		padding: 5px 0;
+	}
 }
