--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -1,6 +1,7 @@
 // Section - Home
 #home {
-	background: url("https://source.unsplash.com/JXUfF7HYfMo/1600x900") fixed;
+	background: url("https://source.unsplash.com/JXUfF7HYfMo/1600x900")
+		no-repeat center fixed;
 	background-size: cover;
 	display: flex;
 	align-items: flex-end;
@@ -9,7 +10,7 @@
 
 	.container {
 		// max-width: 90%;
-		margin-bottom: 8vw;
+		margin-bottom: 10vw;
 
 		.input-group {
 			height: 80px;
