--- a/styles/style.css
+++ b/styles/style.css
@@ -65,10 +65,6 @@
   background: #abaeab;
 }
 
-#footer a {
-  color: inherit;
-}
-
 #footer .row .col-md-3 {
   margin: 1rem;
   text-align: center;
@@ -290,6 +286,14 @@
   max-width: 550px;
 }
 
+#signup-container a {
+  color: #46a96a;
+}
+
+#signup-container a:hover {
+  color: #c1564c;
+}
+
 #signup-container #social-icons #google {
   background: #ea4335;
 }
@@ -372,6 +376,14 @@
 #login-container {
   margin: 140px auto 30px;
   max-width: 550px;
+}
+
+#login-container a {
+  color: #46a96a;
+}
+
+#login-container a:hover {
+  color: #c1564c;
 }
 
 #login-container #social-icons #google {
@@ -841,7 +853,7 @@
 }
 
 a {
-  color: #46a96a;
+  color: inherit;
 }
 
 a:hover {
