--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -3,27 +3,16 @@
 	margin-top: 4rem;
 	background: darken($color: $background-color, $amount: 20%);
 
-	.row {
-		.col-md-3 {
-			//20200426upd shibazaki display: grid;
-			margin: 1rem;
-			text-align: center;
-			max-width: fit-content;
+	h5::after {
+		content: "";
+		display: block;
+		width: 50%;
+		border-bottom: 1px solid black;
+	}
 
-			h5 {
-				margin: 0;
-				padding: 0 0 1.3rem 0;
-			}
-
-			ul {
-				padding: 0;
-
-				li {
-					padding-bottom: 0.5rem;
-					font-size: 0.8rem;
-				}
-			}
-		}
+	li {
+		padding-bottom: 0.2rem;
+		// font-size: 0.8rem;
 	}
 
 	#copyright {
