--- a/styles/_terms.scss
+++ b/styles/_terms.scss
@@ -7,19 +7,19 @@
 		margin-bottom: 40px;
 		border: solid 2px #d6d6d6;
 		border-radius: 10px;
-		padding: 40px 60px;
+		padding: 15px;
 	}
 
 	.terms-head {
 		margin-bottom: 2rem;
 
-		h1 {
-			margin-bottom: 3rem;
+		h2 {
+			margin-bottom: 2rem;
 		}
 	}
 
-	h2 {
-		margin: 3rem 0 1.5rem;
+	h3 {
+		margin: 2rem 0 1.5rem;
 	}
 
 	li {
