Apply footer to all the html files, remove crime details, scroll the hero image, modify stylings

--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -1,8 +1,7 @@
 // Section - Home
 #home {
 	background: url("https://source.unsplash.com/JXUfF7HYfMo/1600x900")
-		no-repeat center fixed;
-	background-size: cover;
+		no-repeat center/cover;
 	display: flex;
 	align-items: flex-end;
 	justify-content: center;
