--- a/styles/_mobile.scss
+++ b/styles/_mobile.scss
@@ -166,7 +166,8 @@
 	#areas {
 		.container .col-lg-6 .media {
 			img {
-				max-width: 250px;
+				// max-width: 250px;
+				height: 220px;
 			}
 		}
 
