--- a/styles/_error.scss
+++ b/styles/_error.scss
@@ -208,10 +208,10 @@
 	a.more-link {
 		text-transform: uppercase;
 		font-size: 13px;
-		background-color: #de7e85;
+		// background-color: #de7e85;
 		padding: 10px 15px;
-		border-radius: 0;
-		color: #fff;
+		// border-radius: 0;
+		// color: #fff;
 		display: inline-block;
 		margin-right: 5px;
 		margin-bottom: 5px;
