--- a/styles/style.css
+++ b/styles/style.css
@@ -93,8 +93,7 @@
 }
 
 #home {
-  background: url("https://source.unsplash.com/JXUfF7HYfMo/1600x900") no-repeat center fixed;
-  background-size: cover;
+  background: url("https://source.unsplash.com/JXUfF7HYfMo/1600x900") no-repeat center/cover;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -189,6 +188,7 @@
 
 #results-container {
   margin: 160px auto 30px;
+  min-height: calc(100vh - 570px);
 }
 
 #results-container li {
@@ -267,195 +267,6 @@
 }
 
 #details #stats-details ul .time-period {
-  font-size: 14px;
-}
-
-#signup-container {
-  margin: 140px auto 30px;
-  max-width: 550px;
-}
-
-#signup-container a {
-  color: #46a96a;
-}
-
-#signup-container a:hover {
-  color: #c1564c;
-}
-
-#signup-container #social-icons #google {
-  background: #ea4335;
-}
-
-#signup-container #social-icons #facebook {
-  background: #1877f2;
-}
-
-#signup-container #social-icons #twitter {
-  background: #1da1f2;
-}
-
-#signup-container #social-icons #instagram {
-  background: #c32aa3;
-}
-
-#signup-container #social-icons #github {
-  background: #211f1f;
-}
-
-#signup-container #social-icons .btn {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding: 0.5rem;
-  margin: 1rem auto;
-  color: #fff;
-}
-
-#signup-container #social-icons .btn .fab {
-  font-size: 1.5rem;
-}
-
-#signup-container #social-icons .btn .mx-auto {
-  text-align: left;
-}
-
-#signup-container #or {
-  position: relative;
-  z-index: 1;
-  margin: 2rem;
-  height: 100%;
-}
-
-#signup-container #or:before {
-  border-top: 1px solid #919591;
-  content: "";
-  margin: 0 auto;
-  position: absolute;
-  top: 50%;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 95%;
-  z-index: -1;
-}
-
-#signup-container #or span {
-  background: #fff;
-  padding: 15px;
-}
-
-#signup-container #show-form-btn {
-  width: 100%;
-  background: #dfe0df;
-  padding: 0.5rem;
-  margin-bottom: 2rem;
-}
-
-#signup-container #signup-form button {
-  width: 100%;
-  margin: 1.5rem auto;
-}
-
-#signup-container #signup-form p {
-  font-size: 14px;
-}
-
-#login-container {
-  margin: 140px auto 30px;
-  max-width: 550px;
-}
-
-#login-container a {
-  color: #46a96a;
-}
-
-#login-container a:hover {
-  color: #c1564c;
-}
-
-#login-container #social-icons #google {
-  background: #ea4335;
-}
-
-#login-container #social-icons #facebook {
-  background: #1877f2;
-}
-
-#login-container #social-icons #twitter {
-  background: #1da1f2;
-}
-
-#login-container #social-icons #instagram {
-  background: #c32aa3;
-}
-
-#login-container #social-icons #github {
-  background: #211f1f;
-}
-
-#login-container #social-icons .btn {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding: 0.5rem;
-  margin: 1rem auto;
-  color: #fff;
-}
-
-#login-container #social-icons .btn .fab {
-  font-size: 1.5rem;
-}
-
-#login-container #social-icons .btn .mx-auto {
-  text-align: left;
-}
-
-#login-container #or {
-  position: relative;
-  z-index: 1;
-  margin: 2rem;
-  height: 100%;
-}
-
-#login-container #or:before {
-  border-top: 1px solid #919591;
-  content: "";
-  margin: 0 auto;
-  position: absolute;
-  top: 50%;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 95%;
-  z-index: -1;
-}
-
-#login-container #or span {
-  background: #fff;
-  padding: 15px;
-}
-
-#login-container #login-form {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-}
-
-#login-container #login-form button {
-  width: 100%;
-  margin: 1.5rem auto;
-}
-
-#login-container #login-form p {
   font-size: 14px;
 }
 
@@ -604,10 +415,7 @@
 #link-container a.more-link {
   text-transform: uppercase;
   font-size: 13px;
-  background-color: #de7e85;
   padding: 10px 15px;
-  border-radius: 0;
-  color: #fff;
   display: inline-block;
   margin-right: 5px;
   margin-bottom: 5px;
@@ -727,7 +535,7 @@
 
 @media screen and (max-width: 400px) {
   #areas .container .col-lg-6 .media img {
-    max-width: 250px;
+    height: 220px;
   }
   #areas a.row.align-items-center {
     -webkit-box-orient: vertical;
@@ -785,76 +593,6 @@
   }
 }
 
-#forget-container {
-  margin: 160px auto 30px;
-  max-width: 550px;
-}
-
-#forget-container h3 {
-  margin-bottom: 1.5rem;
-}
-
-#forget-container .btn {
-  display: block;
-  width: 100%;
-  margin: 1.5rem auto;
-  padding: 5px 0;
-}
-
-#new-container {
-  margin: 160px auto 30px;
-  max-width: 550px;
-}
-
-#new-container h3 {
-  margin-bottom: 1.5rem;
-}
-
-#new-container .btn {
-  display: block;
-  margin: 1.5rem auto;
-  width: 100%;
-  padding: 5px 0;
-}
-
-#terms-container {
-  margin: 160px auto 30px;
-}
-
-#terms-container .terms-contents {
-  margin-bottom: 40px;
-  border: solid 2px #d6d6d6;
-  border-radius: 10px;
-  padding: 15px;
-}
-
-#terms-container .terms-head {
-  margin-bottom: 2rem;
-}
-
-#terms-container .terms-head h2 {
-  margin-bottom: 2rem;
-}
-
-#terms-container h3 {
-  margin: 2rem 0 1.5rem;
-}
-
-#terms-container li {
-  font-size: 14px;
-}
-
-#terms-container .tR {
-  text-align: right;
-  margin-top: 50px;
-}
-
-#terms-container button {
-  background: #ffcb3c;
-  width: 100%;
-  margin-bottom: 1.5rem;
-}
-
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -872,6 +610,11 @@ a:hover {
 
 section {
   min-height: 100vh;
+}
+
+.btn {
+  font-size: 13px;
+  padding: 10px 15px;
 }
 
 .h-100px {
