Add sitemap, modify stylings

--- a/styles/_config.scss
+++ b/styles/_config.scss
@@ -2,10 +2,11 @@
 $primary-color: #ffcb3c;
 $secondary-color: #46a96a;
 $text-color: #333;
+$text-hover: #c1564c;
 $background-color: #dfe0df;
 
 $bar-low: $secondary-color;
-$bar-high: #c1564b;
+$bar-high: #c1564c;
 $bar-mid: darken(
 	$color: $primary-color,
 	$amount: 10%,
