--- a/styles/_mobile.scss
+++ b/styles/_mobile.scss
@@ -36,6 +36,24 @@
 		}
 	}
 
+	// Details
+	#details {
+		#stats {
+			li {
+				font-size: 1.3rem;
+			}
+		}
+	}
+
+	// Sitemap
+	#sitemap-container {
+		ul {
+			li {
+				font-size: 1.3rem;
+			}
+		}
+	}
+
 	// Footer
 	footer#footer h5::after {
 		width: 100%;
