--- a/styles/_details.scss
+++ b/styles/_details.scss
@@ -11,6 +11,14 @@
 	margin-left: auto;
 	margin-right: auto;
 
+	a {
+		color: $secondary-color;
+
+		&:hover {
+			color: $text-hover;
+		}
+	}
+
 	#doughnut-chart-container {
 		margin-bottom: 2rem;
 	}
@@ -21,7 +29,7 @@
 		}
 
 		li {
-			font-size: 1.3rem;
+			font-size: 1.2rem;
 			margin: 1rem 0;
 		}
 
@@ -78,5 +86,9 @@
 				font-size: 14px;
 			}
 		}
+	}
+
+	#link-container a {
+		color: inherit;
 	}
 }
