--- a/styles/_error.scss
+++ b/styles/_error.scss
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,600,700");
 @import url("https://fonts.googleapis.com/css?family=Catamaran:400,800");
 
-// Results
+// 404
 #error-container {
 	margin: 160px auto 30px;
 	min-height: auto;
@@ -9,8 +9,9 @@
 	font-size: 106px;
 	font-family: "Catamaran", sans-serif;
 	font-weight: 800;
+	min-height: calc(100vh - 640px);
 
-	> span {
+	span {
 		display: inline-block;
 		position: relative;
 
@@ -199,25 +200,5 @@
 		margin: 30px auto 30px;
 		font-size: 19px;
 		text-align: center;
-	}
-}
-
-#link-container {
-	text-align: center;
-
-	a.more-link {
-		text-transform: uppercase;
-		font-size: 13px;
-		// background-color: #de7e85;
-		padding: 10px 15px;
-		// border-radius: 0;
-		// color: #fff;
-		display: inline-block;
-		margin-right: 5px;
-		margin-bottom: 5px;
-		line-height: 1.5;
-		text-decoration: none;
-		margin-top: 50px;
-		letter-spacing: 1px;
 	}
 }
