--- a/styles/style.css
+++ b/styles/style.css
@@ -104,6 +104,7 @@
       -ms-flex-pack: center;
           justify-content: center;
   max-width: unset;
+  min-height: 100vh;
 }
 
 #home .container {
@@ -188,7 +189,15 @@
 
 #results-container {
   margin: 160px auto 30px;
-  min-height: calc(100vh - 570px);
+  min-height: calc(100vh - 640px);
+}
+
+#results-container a {
+  color: #46a96a;
+}
+
+#results-container a:hover {
+  color: #c1564c;
 }
 
 #results-container li {
@@ -206,6 +215,14 @@
   margin-right: auto;
 }
 
+#details a {
+  color: #46a96a;
+}
+
+#details a:hover {
+  color: #c1564c;
+}
+
 #details #doughnut-chart-container {
   margin-bottom: 2rem;
 }
@@ -215,7 +232,7 @@
 }
 
 #details #stats li {
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   margin: 1rem 0;
 }
 
@@ -270,6 +287,10 @@
   font-size: 14px;
 }
 
+#details #link-container a {
+  color: inherit;
+}
+
 #error-container {
   margin: 160px auto 30px;
   min-height: auto;
@@ -277,29 +298,30 @@
   font-size: 106px;
   font-family: "Catamaran", sans-serif;
   font-weight: 800;
+  min-height: calc(100vh - 640px);
   /* demo stuff */
 }
 
-#error-container > span {
+#error-container span {
   display: inline-block;
   position: relative;
 }
 
-#error-container > span.four {
+#error-container span.four {
   width: 136px;
   height: 43px;
   border-radius: 999px;
   background: linear-gradient(140deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.07) 43%, transparent 44%, transparent 100%), linear-gradient(105deg, transparent 0%, transparent 40%, rgba(0, 0, 0, 0.06) 41%, rgba(0, 0, 0, 0.07) 76%, transparent 77%, transparent 100%), linear-gradient(to right, #d89ca4, #e27b7e);
 }
 
-#error-container > span.four:before, #error-container > span.four:after {
+#error-container span.four:before, #error-container span.four:after {
   content: "";
   display: block;
   position: absolute;
   border-radius: 999px;
 }
 
-#error-container > span.four:before {
+#error-container span.four:before {
   width: 43px;
   height: 156px;
   left: 60px;
@@ -307,7 +329,7 @@
   background: linear-gradient(128deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.07) 40%, transparent 41%, transparent 100%), linear-gradient(116deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.07) 50%, transparent 51%, transparent 100%), linear-gradient(to top, #99749d, #b895ab, #cc9aa6, #d7969e, #e0787f);
 }
 
-#error-container > span.four:after {
+#error-container span.four:after {
   width: 137px;
   height: 43px;
   -webkit-transform: rotate(-49.5deg);
@@ -318,7 +340,7 @@
   background: linear-gradient(to right, #99749d, #b895ab, #cc9aa6, #d7969e, #e0787f);
 }
 
-#error-container > span.zero {
+#error-container span.zero {
   vertical-align: text-top;
   width: 156px;
   height: 156px;
@@ -329,7 +351,7 @@
           animation: bgshadow 5s infinite;
 }
 
-#error-container > span.zero:before {
+#error-container span.zero:before {
   content: "";
   display: block;
   position: absolute;
@@ -343,7 +365,7 @@
   background: linear-gradient(95deg, transparent 0%, transparent 8%, rgba(0, 0, 0, 0.07) 9%, transparent 50%, transparent 100%), linear-gradient(85deg, transparent 0%, transparent 19%, rgba(0, 0, 0, 0.05) 20%, rgba(0, 0, 0, 0.07) 91%, transparent 92%, transparent 100%);
 }
 
-#error-container > span.zero:after {
+#error-container span.zero:after {
   content: "";
   display: block;
   position: absolute;
@@ -357,7 +379,7 @@
           box-shadow: -2px 2px 2px 0px rgba(0, 0, 0, 0.1);
 }
 
-#error-container > span .screen-reader-text {
+#error-container span .screen-reader-text {
   position: absolute;
   top: -9999em;
   left: -9999em;
@@ -408,23 +430,6 @@
   text-align: center;
 }
 
-#link-container {
-  text-align: center;
-}
-
-#link-container a.more-link {
-  text-transform: uppercase;
-  font-size: 13px;
-  padding: 10px 15px;
-  display: inline-block;
-  margin-right: 5px;
-  margin-bottom: 5px;
-  line-height: 1.5;
-  text-decoration: none;
-  margin-top: 50px;
-  letter-spacing: 1px;
-}
-
 @media screen and (min-width: 1200px) {
   #home div.container {
     margin-bottom: 10vw;
@@ -445,6 +450,12 @@
   #areas .container .col-lg-6 .media img {
     width: 250px;
     height: 180px;
+  }
+  #details #stats li {
+    font-size: 1.3rem;
+  }
+  #sitemap-container ul li {
+    font-size: 1.3rem;
   }
   footer#footer h5::after {
     width: 100%;
@@ -593,6 +604,38 @@
   }
 }
 
+#sitemap-container {
+  margin: 160px auto 30px;
+  min-height: calc(100vh - 640px);
+}
+
+#sitemap-container a {
+  color: #46a96a;
+}
+
+#sitemap-container a:hover {
+  color: #c1564c;
+}
+
+#sitemap-container hr {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+#sitemap-container h2 {
+  font-size: 1.5em;
+}
+
+#sitemap-container li {
+  font-size: 1.2rem;
+  margin: 1rem 0;
+}
+
+#sitemap-container .col {
+  padding-right: 0;
+  padding-left: 0;
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -608,8 +651,22 @@ a:hover {
   color: #c1564c;
 }
 
-section {
-  min-height: 100vh;
+#link-container {
+  text-align: center;
+}
+
+#link-container a.btn {
+  text-transform: uppercase;
+  font-size: 13px;
+  padding: 10px 15px;
+  color: #333;
+  display: inline-block;
+  margin-right: 5px;
+  margin-bottom: 5px;
+  line-height: 1.5;
+  text-decoration: none;
+  margin-top: 50px;
+  letter-spacing: 1px;
 }
 
 .btn {
