--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -41,18 +41,23 @@
 #what-is-sumunara {
 	margin-top: 2rem;
 
-	.col-lg-4 {
+	.col-md-4 {
 		margin: 1rem 0;
+		padding-right: 0;
+		padding-left: 0;
 
 		.card {
 			border: none;
-			width: 90%;
 			margin: auto;
 
 			.card-img-top {
 				margin: auto;
 				width: 15%;
 			}
+
+			// .card-body {
+			// 	padding: 1.25rem 0;
+			// }
 		}
 	}
 }
