Change order of footer, change school ranking to school area data

--- a/styles/_details.scss
+++ b/styles/_details.scss
@@ -1,8 +1,8 @@
-// Details Summary
+// Summary container
 #summary-container {
-	width: 90%;
+	// width: 90%;
 	// max-width: 1000px;
-	margin: 160px auto 30px;
+	margin: 160px auto 80px;
 }
 
 // Details
