--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -20,6 +20,11 @@
 				padding: 1rem 1.5rem;
 			}
 
+			.input-group-append {
+				border: 1px solid #ced4da;
+				border-radius: 0 0.25rem 0.25rem 0;
+			}
+
 			.btn {
 				padding: 1rem;
 			}
